--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.1.7",
     "@tailwindcss/vite": "^4.0.17",
+    "@tsparticles/all": "^3.8.1",
+    "@tsparticles/react": "^3.0.0",
     "framer-motion": "^12.6.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-particles": "^2.12.2",
     "tailwindcss": "^4.0.17",
+    "tsparticles": "^3.8.1",
+    "tsparticles-engine": "^2.12.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
